--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="https://media.licdn.com/dms/image/D5603AQGqkKEuZyrVzA/profile-displayphoto-shrink_200_200/0/1721407572711?e=1726704000&v=beta&t=RxDNIQ0afHz82C7cGm_qWxv5BZetOOqj8roJBEDTnZo" alt="David Matias" >
+          <img src="assets/images/avatar.jpg" alt="David Matias" >
         </figure>
 
         <div class="info-content">
@@ -50,7 +50,6 @@
 
           <p class="title">Web Developer</p>
         </div>
-
         <button class="info_more-btn" data-sidebar-btn>
           <span>Show Contacts</span>
 
