Change outsystems logo

--- a/index.html
+++ b/index.html
@@ -161,7 +161,7 @@
 
             <li class="clients-item">
               <a href="#">
-                <img src="https://www.outsystems.com/-/media/themes/outsystems/website/site-theme/imgs/logo.svg?updated=20211217193441" alt="Outsystems">
+                <img src="https://www.outsystems.com/PortalTheme/img/outsystemslogo.svg?84069" alt="Outsystems">
               </a>
             </li>
 
